# ira

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  lint.yml  test.yml
examples/: basic.rs
examples/basic/: Cargo.toml
examples/basic/src/: lib.rs  main.rs
examples/jetpack/: Cargo.toml
examples/jetpack/src/: main.rs
examples/multiplayer/: Cargo.toml
examples/multiplayer/src/: main.rs
ira/: Cargo.toml
ira/shaders/: pbr.wgsl
ira/src/: app.rs  camera.rs  client.rs  drum.rs  game.rs  lib.rs  light.rs  material.rs  model.rs  packet.rs  physics.rs  render.rs  server.rs  texture.rs
ira/src/extra/: camera.rs  mod.rs  ratelimit.rs
ira/src/render/: mod.rs  model.rs  texture.rs
ira/src/server/: local.rs  mod.rs  remote.rs
ira_cli/: Cargo.toml  README.md
ira_cli/src/: main.rs
ira_drum/: Cargo.toml  README.md
ira_drum/src/: drum.rs  handle.rs  lib.rs  light.rs  main.rs  material.rs  model.rs
ira_drum/src/source/: gltf.rs  mod.rs  obj.rs
shaders/: cubemap.wgsl  irradiance.wgsl  pbr.wgsl  shader-bk.wgsl  shader.wgsl  triangle.wgsl
src/: app.rs  camera.rs  drum.rs  ext.rs  lib.rs  light.rs  main.rs  material.rs  model.rs  pipeline.rs  texture.rs
