[package]
name = "ira"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Matthew Polak <git@matteopolak.com>"]
description = "A general-purpose, code-first game engine."
readme = "../README.md"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
glam = "0.27"
gltf = { version = "1", features = ["import"] }
image = "0.25"
ira_drum.path = "../ira_drum"
log = "0.4"
nalgebra = { version = "0.32", features = ["convert-glam027"] }
pollster = "0.3"
rapier3d = "0.20"
wgpu = "0.20"
winit = "0.30"

[features]
default = ["render"]
render = []

