[package]
name = "ira"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Matthew Polak <git@matteopolak.com>"]
description = "A general-purpose, code-first game engine."
readme = "../README.md"

[dependencies]
anyhow = "1"
bitcode = { version = "0.6.0", features = ["glam"] }
bytemuck = { version = "1", features = ["derive"] }
env_logger = "0.11"
glam = "0.27"
gltf = { version = "1", features = ["import"] }
image = "0.25"
log = "0.4"
nalgebra = { version = "0.32", features = ["convert-glam027"] }
pollster = "0.3"
rapier3d = "0.20"
tracing = "0.1"

[dependencies.ira_drum]
workspace = true
default-features = false
features = ["gltf", "glam", "obj"]

[dependencies.wgpu]
version = "0.20"
optional = true

[dependencies.winit]
version = "0.30"
optional = true

[features]
client = ["dep:wgpu", "dep:winit", "ira_drum/wgpu"]
server = []

