[package]
name = "ira_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command line interface for preparing assets for Ira."

[[bin]]
name = "ira"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.ira_drum]
# version = "0.1.0"
path = "../ira_drum"
default-features = false
features = ["gltf", "obj"]

