[package]
name = "multiplayer"
edition = "2021"
authors = ["Matthew Polak <git@matteopolak.com>"]
license = "MIT"

[dependencies]
ira.path = "../../ira"
ira_drum.path = "../../ira_drum"
basic = { path = "../basic", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["client"]
client = ["ira/client", "basic/client"]
server = ["ira/server", "basic/server"]

