[package]
name = "multiplayer"
edition = "2021"
authors = ["Matthew Polak <git@matteopolak.com>"]
license = "MIT"

[dependencies]
bitcode = "0.6"
ira.path = "../../ira"
ira_drum.path = "../../ira_drum"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.basic]
path = "../basic"
default-features = false
optional = true

[features]
default = ["client"]
client = ["dep:basic", "ira/client", "basic/client"]
server = ["ira/server"]

